<resources>
    <string name="app_name">Done</string>
    <string name="title_home">Quit</string>
    <string name="title_dashboard">Friends</string>
    <string name="title_notifications">Settings</string>
    <string name="prompt_quit_title">What are you quitting?</string>
    <string name="pick_date_button">Pick a date</string>
    <string name="title_new_quit">Quit something new</string>
    <string name="new_quit_done_button_title">Done</string>
    <string name="new_quit_cancel_button_title">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_time_button">Pick A Time</string>

    <string name="fui_missing_first_and_last_name" translation_description="Inline error for empty email address in input field. [CHAR_LIMIT=60]">Please enter a username.</string>
    <string name="fui_name_hint" translation_description="Hint for last name input field">Username</string>
    <string name="quit_drawer_delete">Delete</string>
    <string name="quit_drawer_edit">Edit</string>
    <string name="quit_drawer_relapsed">Relapsed</string>
    <string name="button_add_friend_description">Adds a new friend</string>
    <string name="button_add_quit_description">Adds new quit</string>
    <string name="title_add_friend">Add a Friend</string>
    <string name="prompt_friend_title">Friends email</string>
    <string name="day_month_year_placeholder">dd/mm/yyyy</string>
    <string name="hour_minute_placeholder">hh:mm</string>
</resources>