<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_quit">

    <fragment
        android:id="@+id/navigation_quit"
        android:name="com.kryzano.done.ui.quit.QuitFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_quit" />

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.kryzano.done.ui.friends.FriendsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.kryzano.done.ui.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" />
</navigation>