<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/recycler_friend_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:textSize="23sp"
        android:text="@string/title_add_friend"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/new_friend_title_text"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_friend_title_text"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="27dp"
        android:layout_marginTop="37dp"
        android:hint="@string/prompt_friend_title"
        app:layout_constraintTop_toBottomOf="@id/recycler_friend_title_text"
        app:layout_constraintStart_toStartOf="@id/recycler_friend_title_text"
        app:layout_constraintEnd_toEndOf="@id/recycler_friend_title_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id='@+id/new_friend_title_edit_text'
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_friend_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="37dp"
        android:layout_marginStart="27dp"
        android:text="@string/new_quit_cancel_button_title"
        app:layout_constraintTop_toBottomOf="@+id/new_friend_title_text"
        app:layout_constraintStart_toStartOf="@+id/new_friend_title_text"
        app:layout_constraintEnd_toStartOf="@+id/new_friend_done_button"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_friend_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="37dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="27dp"
        android:text="@string/new_quit_done_button_title"
        app:layout_constraintStart_toEndOf="@+id/new_friend_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/new_friend_title_text"
        app:layout_constraintEnd_toEndOf="@+id/new_friend_title_text"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
