<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:foreground="?android:selectableItemBackground"
    android:orientation="vertical"
    app:cardBackgroundColor="?cardBackgroundColor"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/recycler_quit_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:textSize="23dp"
            android:text="@string/title_new_quit"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/new_quit_title_text"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_quit_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="27dp"
            android:layout_marginTop="37dp"
            android:hint="@string/prompt_quit_title"
            app:layout_constraintTop_toBottomOf="@id/recycler_quit_title_text"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id='@+id/new_quit_title_edit_text'
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/new_quit_start_date_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="27dp"
            android:text="@string/pick_date_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_quit_title_text"
            app:strokeColor="?android:textColorPrimary" />
        <TextView
            android:id="@+id/new_quit_start_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="dd/mm/yyyy"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginVertical="27dp"
            app:layout_constraintStart_toEndOf="@id/new_quit_start_date_button"
            app:layout_constraintTop_toBottomOf="@id/new_quit_title_text"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/new_quit_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="37dp"
            android:layout_marginStart="27dp"
            android:text="@string/new_quit_cancel_button_title"
            app:layout_constraintTop_toBottomOf="@id/new_quit_start_date_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/new_quit_done_button"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/new_quit_done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="37dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="27dp"
            android:text="@string/new_quit_done_button_title"
            app:layout_constraintStart_toEndOf="@id/new_quit_cancel_button"
            app:layout_constraintTop_toBottomOf="@id/new_quit_start_date_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>